--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
   </head>
   <body>
     <header class="nav-header">
+     </div class="logo">
+     <h1><a href="index.html" id="logo">days</a></h1>
+    </div>
       <div class="burger">
         <div class="line1"></div>
         <div class="line2"></div>
@@ -26,13 +29,14 @@
           <img src="./img/forest.png" alt="forest image" />
           <div class="reveal-img"></div>
         </div>
-
-        <div class="title">
-          <h2>
-            Freedom at your
-            <span class="mountain-span">fingertips.</span>
-          </h2>
-          <div class="title-swipe t-swipe1"></div>
+        <div class="hero-desc">
+          <div class="title">
+            <h2>
+              Freedom at your
+              <span class="mountain-span">fingertips.</span>
+            </h2>
+            <div class="title-swipe t-swipe1"></div>
+          </div>
         </div>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate
@@ -42,8 +46,72 @@
         <a class="explore mountain-exp">Explore</a>
         <div class="reveal-text"></div>
       </section>
+      <section class="hike slide">
+        <div class="hero-img">
+          <img src="./img/hike.png" alt="hike image" />
+          <div class="reveal-img"></div>
+        </div>
+        <div class="hero-desc">
+          <div class="title">
+            <h2>
+              Freedom at your
+              <span class="hike-span">fingertips.</span>
+            </h2>
+            <div class="title-swipe t-swipe2"></div>
+          </div>
+        </div>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate
+          quasi iusto accusantium magni exercitationem molestias beatae quos
+          odio minima iure.
+        </p>
+        <a class="explore hike-exp">Explore</a>
+        <div class="reveal-text"></div>
+      </section>
+      <section class="fashion slide">
+        <div class="hero-img">
+          <img src="./img/fashion.png" alt="fashion image" />
+          <div class="reveal-img"></div>
+        </div>
+        <div class="hero-desc">
+          <div class="title">
+            <h2>
+              Freedom at your
+              <span class="fashion-span">fingertips.</span>
+            </h2>
+            <div class="title-swipe t-swipe3"></div>
+          </div>
+        </div>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate
+          quasi iusto accusantium magni exercitationem molestias beatae quos
+          odio minima iure.
+        </p>
+        <a class="explore fashion-exp">Explore</a>
+        <div class="reveal-text"></div>
+      </section>
     </main>
-    <h1><a href="index.html" id="logo">days</a></h1>
+    <div class="nav-bar">
+      <ul class="nav-links">
+        <h3>Twitter</h3>
+        <h3>Youtube</h3>
+        <h3>Instagram</h3>
+      </ul>
+    </div>
+    <div class="contact">
+      <h2>Stay in touch</h2>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta earum
+        dolorum nesciunt dignissimos sed eligendi suscipit quo, sint impedit
+        laboriosam?
+      </p>
+    </div>
+    <div class="cursor">
+      <span class="cursor-text"></span>
+    </div>
+    <div class="swipe swipe1"></div>
+    <div class="swipe swipe2"></div>
+    <div class="swipe swipe3"></div>
     <script src="app.js"></script>
   </body>
 </html>
